# Knowledge-Base-Centric-RAG

./: RAG_agent.py  README.md  dataset.json  pyproject.toml
src/: RAG_agent.py  app.py  dataset.json
