version = "0.1.0"
description = ""
authors = [
    {name = "Gaurav0002",email = "gauravking918@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain[google-genai] (>=0.3.25,<0.4.0)",
    "langchain-google-genai (>=2.1.5,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "streamlit (>=1.45.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "qna_rag", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
